# zed-mcp-server-basic-memory

./: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm
.github/workflows/: publish-zed-extension.yml  release.yml
src/: mcp_server_basic_memory.rs
