[package]
name = "mcp_server_basic_memory"
version = "0.0.1"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "A Zed Editor extension that provides Basic Memory integration via MCP"
authors = ["Ossfellow <ossfellow@users.noreply.github.com>"]
repository = "https://github.com/ossfellow/zed-mcp-server-basic-memory"

[lib]
path = "src/mcp_server_basic_memory.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
zed_extension_api = "0.4.0"
